# GREIN_proxy

./: .gitignore  README.md  pyproject.toml  requirements.txt
docker/: Dockerfile  build_image.sh
grein_proxy/: flask_app.py  logo.py  proxy.py  update_database.py
tests/: test_grein_proxy.py
