[build-system]
requires = ["hatchling", "hatch-requirements-txt"]
build-backend = "hatchling.build"

[project]
name = "grein_proxy"
version = "0.0.1"
authors = [
  {name="Griss Lab", email="johannes.griss@meduniwien.ac.at"},
  {name="Alexander Grentner", email="alexander.grentner@meduniwien.ac.at"}
]
description = "Proxy to the GREIN resource"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dynamic = ["dependencies"]

[tool.hatch.metadata.hooks.requirements_txt]
files = ["requirements.txt"]

[project.urls]
"Homepage" = "https://github.com/grisslab/GREIN_proxy"
"Bug Tracker" = "https://github.com/grisslab/GREIN_proxy/issues"

[project.scripts]
update_database = "grein_proxy.update_database:main"